manifest-files/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: ClusterIP
  selector:
    app: dev
  ports:
    - port: 80
      targetPort: 80
